syntax = "proto3";

option csharp_namespace = "JDBC.NET.Proto";

package bridge;

service BridgeService {
    rpc loadDriver (LoadDriverRequest) returns (LoadDriverResponse);
}

message LoadDriverRequest {
	string path = 1;
}

message LoadDriverResponse {
  string version = 1;
}
